--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'">
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'">
     <script data-main="scripts/main" src="node_modules/require.js/require.js"></script>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 <h1>Hello World!</h1>
