Add setTitle functionality

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-<h1>Hello World!</h1>
+<h1 id="title">-zmień mnie-</h1>
 <p id="text"></p>
 <button id="button">Wciśnij mnie!</button>
 <script>var exports = {};</script>
