Add setAuthor functionality

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 <h1 id="title">-zmień mnie-</h1>
+<h3>Autor: <span id="author"></span></h3>
 <p id="text"></p>
 <button id="button">Wciśnij mnie!</button>
 <script>var exports = {};</script>
